--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "canvas-toBlob": "1.0.0",
     "decode-html": "2.0.0",
     "diff-match-patch": "1.0.4",
+    "dotenv": "^16.0.3",
     "format-message": "6.2.1",
     "htmlparser2": "3.10.0",
-    "immutable": "3.8.1",
+    "immutable": "3.8.2",
     "jszip": "^3.1.5",
     "minilog": "3.1.0",
+    "openai": "^3.1.0",
     "scratch-parser": "5.1.1",
     "scratch-sb1-converter": "0.2.7",
     "scratch-translate-extension-languages": "0.0.20191118205314",
